[gd_scene load_steps=26 format=3 uid="uid://c3adto1be3xa2"]

[ext_resource type="Script" path="res://nodes/characters/multiplayer/player_mul.gd" id="1_upm2h"]
[ext_resource type="PackedScene" uid="uid://km0bq0gsqwmw" path="res://nodes/very_cool_buttons/very_cool_fireball_button.tscn" id="2_hajjj"]
[ext_resource type="Texture2D" uid="uid://c3prva38mw2hh" path="res://media/SecondChar/SecondChar_idle.png" id="2_noe77"]
[ext_resource type="PackedScene" uid="uid://cua0jhtddpgu3" path="res://nodes/very_cool_buttons/very_cool_block_button.tscn" id="3_jv1us"]
[ext_resource type="AudioStream" uid="uid://ceqtyf8i6pfjq" path="res://media/sfx/big_fireball.wav" id="4_bcwt1"]
[ext_resource type="Texture2D" uid="uid://brv7edpwvp45f" path="res://media/SecondChar/SecondChar_block_color.png" id="4_f2nuj"]
[ext_resource type="PackedScene" uid="uid://bbcwbus8mbbec" path="res://nodes/very_cool_buttons/very_cool_big_fireball_button.tscn" id="4_t01ty"]
[ext_resource type="AudioStream" uid="uid://cs2av37h3qptr" path="res://media/sfx/block.wav" id="4_tyuok"]
[ext_resource type="PackedScene" uid="uid://clsmp4hvp8olb" path="res://nodes/very_cool_buttons/very_cool_double_fireball_button.tscn" id="5_n8usj"]
[ext_resource type="Texture2D" uid="uid://dih8ygxgxsgf2" path="res://media/SecondChar/SecondChar_charge_color.png" id="6_705t5"]
[ext_resource type="AudioStream" uid="uid://cabk1jmro237s" path="res://media/sfx/charge02.wav" id="6_lkn2m"]
[ext_resource type="Texture2D" uid="uid://b8p0o1hwd7d2n" path="res://media/SecondChar/SecondChar_hitted_color.png" id="8_h8asg"]
[ext_resource type="Texture2D" uid="uid://c2vbpwe4nyp2j" path="res://media/SecondChar/SecondChar_fireball_color.png" id="8_keivj"]
[ext_resource type="AudioStream" uid="uid://b4oglay37sa58" path="res://media/sfx/gura_a.wav" id="9_sqhs7"]
[ext_resource type="PackedScene" uid="uid://b732gs6p4vb3i" path="res://nodes/charge_meter.tscn" id="10_yss4r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7wuc"]
size = Vector2(152, 454)

[sub_resource type="Animation" id="Animation_3sjde"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_noe77")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ColorRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-203, 231)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.235294, 0.74902, 0.423529, 0.454902)]
}

[sub_resource type="Animation" id="Animation_k5ivg"]
resource_name = "big_fireball"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_keivj")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_bcwt1")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_vyhkl"]
resource_name = "block"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_f2nuj")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_tyuok")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.207843, 0.721569, 0.705882, 0.454902)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ColorRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-203, 231), Vector2(-203, -322)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_m3swk"]
resource_name = "charge"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_705t5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.18, 0.2),
"transitions": PackedFloat32Array(1, 0, 1),
"update": 0,
"values": [Vector2(-203, 231), Vector2(-203, -311), Vector2(-203, 231)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lkn2m")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.942774, 0.847968, 0.328243, 0.454902)]
}

[sub_resource type="Animation" id="Animation_pf7un"]
resource_name = "fireball"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_keivj")]
}

[sub_resource type="Animation" id="Animation_e0mlr"]
resource_name = "hitted"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_h8asg")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.253432,
"stream": ExtResource("9_sqhs7")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.941176, 0.356863, 0.309804, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.33),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_08ybx"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_noe77")]
}

[sub_resource type="Animation" id="Animation_6vnig"]
resource_name = "double_fireball"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("8_keivj"), ExtResource("2_noe77"), ExtResource("8_keivj")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jb0rc"]
_data = {
"RESET": SubResource("Animation_3sjde"),
"big_fireball": SubResource("Animation_k5ivg"),
"block": SubResource("Animation_vyhkl"),
"charge": SubResource("Animation_m3swk"),
"double_fireball": SubResource("Animation_6vnig"),
"fireball": SubResource("Animation_pf7un"),
"hitted": SubResource("Animation_e0mlr"),
"idle": SubResource("Animation_08ybx")
}

[node name="Player2" type="Node2D"]
script = ExtResource("1_upm2h")

[node name="CanvasLayerPublic" type="CanvasLayer" parent="."]

[node name="ChargeMeter" parent="CanvasLayerPublic" instance=ExtResource("10_yss4r")]
unique_name_in_owner = true
position = Vector2(1904, 16)
rotation = -3.14159
scale = Vector2(3, -3)

[node name="AvatarPanel" type="Panel" parent="CanvasLayerPublic"]
offset_left = 1840.0
offset_top = 128.0
offset_right = 1902.0
offset_bottom = 190.0
metadata/_edit_group_ = true

[node name="AvatarTexture" type="TextureRect" parent="CanvasLayerPublic/AvatarPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 368.0
offset_right = 384.0
offset_bottom = 368.0

[node name="ChargeButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 1152.0
offset_top = 520.0
offset_right = 1259.0
offset_bottom = 579.0
focus_mode = 0
text = "Charge"

[node name="FireballButton" parent="CanvasLayer/Buttons" instance=ExtResource("2_hajjj")]
layout_mode = 0
offset_left = 904.0
offset_top = 432.0
offset_right = 1416.0
offset_bottom = 944.0
scale = Vector2(0.25, 0.25)

[node name="BlockButton" parent="CanvasLayer/Buttons" instance=ExtResource("3_jv1us")]
layout_mode = 0
offset_left = 904.0
offset_top = 568.0
offset_right = 1416.0
offset_bottom = 1080.0
scale = Vector2(0.25, 0.25)

[node name="DoubleFireballButton" parent="CanvasLayer/Buttons" instance=ExtResource("5_n8usj")]
offset_left = 760.0
offset_top = 432.0
offset_right = 1272.0
offset_bottom = 944.0
scale = Vector2(0.25, 0.25)

[node name="BigFireBallButton" parent="CanvasLayer/Buttons" instance=ExtResource("4_t01ty")]
layout_mode = 0
offset_left = 616.0
offset_top = 432.0
offset_right = 1128.0
offset_bottom = 944.0
scale = Vector2(0.25, 0.25)

[node name="Sprite" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("2_noe77")
flip_h = true

[node name="ColorRect" type="ColorRect" parent="Sprite"]
offset_left = -203.0
offset_top = 231.0
offset_right = 162.0
offset_bottom = 328.0
color = Color(0.235294, 0.74902, 0.423529, 0.454902)

[node name="ActionLabel" type="Label" parent="."]
visible = false
offset_left = -8.0
offset_top = -271.0
offset_right = 42.0
offset_bottom = -245.0
text = "Action"

[node name="Area2D" type="Area2D" parent="." groups=["character"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_s7wuc")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jb0rc")
}

[node name="FireBallSpawnPos" type="Marker2D" parent="."]
position = Vector2(-151, -55)

[node name="backwindMarker2D" type="Marker2D" parent="."]
position = Vector2(168, 152)

[connection signal="button_down" from="CanvasLayer/Buttons/ChargeButton" to="." method="_on_charge_button_button_down"]
[connection signal="toggled" from="CanvasLayer/Buttons/FireballButton" to="." method="_on_fireball_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/BlockButton" to="." method="_on_block_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/DoubleFireballButton" to="." method="_on_double_fireball_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/BigFireBallButton" to="." method="_on_big_fire_ball_button_toggled"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
